--- a/.gitmodules
+++ b/.gitmodules
@@ -1,27 +1,27 @@
-[submodule ".vim/bundle/vim-colors-solarized"]
-	path = .vim/bundle/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
-[submodule ".vim/bundle/vim-surround"]
-	path = .vim/bundle/vim-surround
-	url = https://github.com/tpope/vim-surround.git
 [submodule ".vim/bundle/supertab"]
 	path = .vim/bundle/supertab
 	url = https://github.com/ervandew/supertab.git
-[submodule ".vim/bundle/vim-ruby"]
-	path = .vim/bundle/vim-ruby
-	url = https://github.com/vim-ruby/vim-ruby.git
-[submodule ".vim/bundle/vim-endwise"]
-	path = .vim/bundle/vim-endwise
-	url = https://github.com/tpope/vim-endwise.git
-[submodule ".vim/bundle/vim-pathogen"]
-	path = .vim/bundle/vim-pathogen
-	url = https://github.com/tpope/vim-pathogen.git
 [submodule ".vim/bundle/ir_black"]
 	path = .vim/bundle/ir_black
 	url = https://github.com/twerth/ir_black.git
-[submodule ".vim/bundle/html5-syntax.vim"]
-	path = .vim/bundle/html5-syntax.vim
-	url = https://github.com/othree/html5-syntax.vim.git
-[submodule ".vim/bundle/ctrl-p"]
-	path = .vim/bundle/ctrl-p
+[submodule ".vim/bundle/ctrl_p"]
+	path = .vim/bundle/ctrl_p
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule ".vim/bundle/html5_syntax"]
+	path = .vim/bundle/html5_syntax
+	url = https://github.com/othree/html5-syntax.vim.git
+[submodule ".vim/bundle/solarized"]
+	path = .vim/bundle/solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule ".vim/bundle/surround"]
+	path = .vim/bundle/surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule ".vim/bundle/vim_ruby"]
+	path = .vim/bundle/vim_ruby
+	url = https://github.com/vim-ruby/vim-ruby.git
+[submodule ".vim/bundle/endwise"]
+	path = .vim/bundle/endwise
+	url = https://github.com/tpope/vim-endwise.git
+[submodule ".vim/bundle/pathogen"]
+	path = .vim/bundle/pathogen
+	url = https://github.com/tpope/vim-pathogen.git
