Add JavaScript syntax file

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule ".vim/bundle/pathogen"]
 	path = .vim/bundle/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule ".vim/bundle/javascript_syntax"]
+	path = .vim/bundle/javascript_syntax
+	url = https://github.com/pangloss/vim-javascript.git
