--- a/.xvimrc
+++ b/.xvimrc
@@ -5,5 +5,5 @@
   " Change the leader key from \ to ,
   let mapleader=','
 
-  " Use jk instead of <Esc> to enter Normal mode
+  " Use jk instead of <Esc> to enter Normal mode.
   imap jk <Esc>
