--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Act like GNU Screen
 set -g prefix C-a
+bind a send-prefix
 bind-key C-a last-window
 
 # Reload config file
