--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,9 @@ set-option -g renumber-windows on
 # Behave like Vim
 setw -g mode-keys vi
 
+# Enable mouse scrolling
+setw -g mode-mouse on
+
 # Smart pane switching with awareness of Vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
