Improve mouse support in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,10 @@ set-option -g renumber-windows on
 setw -g mode-keys vi
 
 # Enable mouse scrolling
-setw -g mode-mouse on
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 # Smart pane switching with awareness of Vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
