--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ set-option -g renumber-windows on
 # Behave like Vim
 setw -g mode-keys vi
 
-# Enable mouse scrolling
+# Enable mouse support
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
