--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -5,7 +5,7 @@
 	<key>AdjustWindowForFontSizeChange</key>
 	<false/>
 	<key>AllowClipboardAccess</key>
-	<false/>
+	<true/>
 	<key>AnimateDimming</key>
 	<false/>
 	<key>AppleAntiAliasingThreshold</key>
@@ -308,9 +308,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>1261 201 445 270 0 0 1920 1178 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>572 566 924 485 0 0 1920 1178 </string>
+	<string>629 543 924 485 0 0 1920 1178 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>37 645 665 476 0 0 1920 1178 </string>
+	<string>37 254 945 859 0 0 1920 1178 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>69 78 1297 1088 0 0 1920 1178 </string>
 	<key>New Bookmarks</key>
