Move terminal color setting to .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@
 # brew install reattach-to-user-namespace
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
+# Display colors correctly
+set -g default-terminal "screen-256color"
+
 # Act like GNU Screen
 set -g prefix C-a
 bind a send-prefix
