--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,17 +4,18 @@
 # brew install reattach-to-user-namespace
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
-# Display colors correctly
+# Improve colors
 set -g default-terminal "screen-256color"
 
 # Act like GNU Screen
+unbind C-b
 set -g prefix C-a
-bind a send-prefix
+
+# Switch to last pane
 bind-key C-a last-window
 
-# Reload config file
-unbind r
-bind r source-file ~/.tmux.conf
+# Increase scrollback lines
+set -g history-limit 10000
 
 # Allows for faster key repetition
 set -s escape-time 0
@@ -25,14 +26,14 @@ set -g base-index 1
 # Renumber existing windows when windows are destroyed
 set-option -g renumber-windows on
 
-# Behave like Vim
-setw -g mode-keys vi
-
 # Enable mouse support
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
+
+# Behave like Vim
+setw -g mode-keys vi
 
 # Smart pane switching with awareness of Vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
