Replace bash with zsh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,10 @@
 
 # Make the OS X clipboard work within tmux
 # brew install reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# Make zsh the default shell
+set-option -g default-shell $SHELL
 
 # Improve colors
 set -g default-terminal "screen-256color"
