--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # Brian Ustas's .tmux.conf
 
-# Make the OS X clipboard work within tmux
+# Make the OS X clipboard work within tmux (ignored on Linux).
 # brew install reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "which reattach-to-user-namespace >/dev/null && reattach-to-user-namespace -l zsh || zsh"
 
 # Make zsh the default shell
 set-option -g default-shell $SHELL
