--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,9 +46,36 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Status bar
-set -g status-left ''
-set -g status-right ''
-set -g status-fg white
-set -g status-bg black
-set-window-option -g window-status-current-bg white
-set-window-option -g window-status-current-fg black
+set -g status-left ""
+set -g status-right ""
+
+# Colors (credit: connrs/dotfiles/master/tmux/tomorrow-night.tmux)
+  # Status bar
+  set -g status-bg "#373b41"
+  set -g status-fg "#c5c8c6"
+
+  # Highlight active window
+  setw -g window-status-current-bg "#282a2e"
+  setw -g window-status-current-fg "#81a2be"
+
+  # Highlight activity in status bar
+  setw -g window-status-activity-fg "#8abeb7"
+  setw -g window-status-activity-bg "#1d1f21"
+
+  # Pane border and colors
+  set -g pane-active-border-bg default
+  set -g pane-active-border-fg "#373b41"
+  set -g pane-border-bg default
+  set -g pane-border-fg "#373b41"
+
+  set -g clock-mode-colour "#81a2be"
+  set -g clock-mode-style 24
+
+  set -g message-bg "#8abeb7"
+  set -g message-fg "#000000"
+
+  set -g message-command-bg "#8abeb7"
+  set -g message-command-fg "#000000"
+
+  set -g mode-bg "#8abeb7"
+  set -g mode-fg "#000000"
