Get Ctrl-a to work within tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,11 +11,11 @@ set-option -g default-shell $SHELL
 set -g default-terminal "screen-256color"
 
 # Act like GNU Screen
-unbind C-b
 set -g prefix C-a
+unbind-key C-b
 
-# Switch to last pane
-bind-key C-a last-window
+# To send C-a to the shell: C-a, C-a
+bind-key C-a send-prefix
 
 # Increase scrollback lines
 set -g history-limit 10000
