Document Tmux dependencies

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,14 @@
 # Brian Ustas's .tmux.conf
+#
+# Supports OS X and Linux (tested with Yosemite and Ubuntu 14.04).
+#
+### Expected Installs
+#
+# - https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+#   - Enables the clipboard on OS X
+#   - brew install reattach-to-user-namespace
 
 # Make the OS X clipboard work within tmux (ignored on Linux).
-# brew install reattach-to-user-namespace
 set-option -g default-command "which reattach-to-user-namespace >/dev/null && reattach-to-user-namespace -l zsh || zsh"
 
 # Make zsh the default shell
