--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,10 @@
 #   - Enables the clipboard on OS X
 #   - brew install reattach-to-user-namespace
 
+# Force tmux to use UTF-8
+set -g utf8
+set-window-option -g utf8 on
+
 # Make the OS X clipboard work within tmux (ignored on Linux).
 set-option -g default-command "which reattach-to-user-namespace >/dev/null && reattach-to-user-namespace -l zsh || zsh"
 
