Rename tmux windows based on what’s running in them

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,9 @@ set -s escape-time 0
 # Start numbering at 1
 set -g base-index 1
 
+# Rename windows based on what's running in them
+set-window-option -g automatic-rename on
+
 # Renumber existing windows when windows are destroyed
 set-option -g renumber-windows on
 
