--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,7 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Status bar
 set -g status-left ""
-set -g status-right ""
+set -g status-right '#[fg=white]%H:%M %m-%d-%y '
 
 # Colors (credit: connrs/dotfiles/master/tmux/tomorrow-night.tmux)
   # Status bar
