--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,6 +52,15 @@ set -g mouse-select-window on
 # Behave like Vim
 setw -g mode-keys vi
 
+# Enter copy-mode with C-[
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Copy selection on Enter
+unbind-key -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 # Smart pane switching with awareness of Vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
