Use C-H and C-L to cycle between windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,6 +65,10 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind | split-window -h
 bind - split-window -v
 
+# and use C-h and C-l to cycle thru panes
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
 # Smart pane switching with awareness of Vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
