Create shortcuts for resizing panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,6 +69,12 @@ bind - split-window -v
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
+# resize panes using PREFIX H, J, K, L
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
+
 # Smart pane switching with awareness of Vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
