--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,16 +23,16 @@ set -g default-terminal "screen-256color"
 
 # Act like GNU Screen
 set -g prefix C-a
-unbind-key C-b
+unbind C-b
 
 # To send C-a to the shell: C-a, C-a
-bind-key C-a send-prefix
+bind C-a send-prefix
 
 # Increase scrollback lines
-set -g history-limit 10000
+set -g history-limit 50000
 
 # Allows for faster key repetition
-set -s escape-time 0
+set -g escape-time 0
 
 # Start numbering at 1
 set -g base-index 1
@@ -54,12 +54,12 @@ setw -g mode-keys vi
 
 # Enter copy-mode with C-[
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Copy selection on Enter
-unbind-key -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Use PREFIX | to split window horizontally and PREFIX - to split vertically
 bind | split-window -h
