Clean up .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,11 +52,10 @@ set -g mouse-select-window on
 # Behave like Vim
 setw -g mode-keys vi
 
-# Enter copy-mode with C-[
+# Enter copy-mode with PREFIX [
 # Setup 'v' to begin selection as in Vim
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
 # Copy selection on Enter
 unbind -t vi-copy Enter
 bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
@@ -65,11 +64,11 @@ bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind | split-window -h
 bind - split-window -v
 
-# and use C-h and C-l to cycle thru panes
+# Use PREFIX h and PREFIX l to cycle through windows
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-# resize panes using PREFIX H, J, K, L
+# Resize panes using PREFIX H, J, K, L
 bind H resize-pane -L 5
 bind J resize-pane -D 5
 bind K resize-pane -U 5
