Make resizing panes repeatable and put the time on the far right.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,10 +69,10 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # Resize panes using PREFIX H, J, K, L
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # Smart pane switching with awareness of Vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -84,7 +84,7 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Status bar
 set -g status-left ""
-set -g status-right '#[fg=white]%H:%M %m-%d-%y '
+set -g status-right '#[fg=white]%m-%d-%y %H:%M '
 
 # Colors (credit: connrs/dotfiles/master/tmux/tomorrow-night.tmux)
   # Status bar
