Make the active window status bar white with black text

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,8 +92,9 @@ set -g status-right '#[fg=white]%m-%d-%y %H:%M '
   set -g status-fg "#c5c8c6"
 
   # Highlight active window
-  setw -g window-status-current-bg "#282a2e"
-  setw -g window-status-current-fg "#81a2be"
+  setw -g window-status-current-bg "#b4b7b5"
+  setw -g window-status-current-fg "#1d1f21"
+  setw -g window-status-current-attr bold
 
   # Highlight activity in status bar
   setw -g window-status-activity-fg "#8abeb7"
@@ -110,6 +111,7 @@ set -g status-right '#[fg=white]%m-%d-%y %H:%M '
 
   set -g message-bg "#8abeb7"
   set -g message-fg "#000000"
+  set -g message-attr bold
 
   set -g message-command-bg "#8abeb7"
   set -g message-command-fg "#000000"
