--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,7 +84,7 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Status bar
 set -g status-left ""
-set -g status-right '#[fg=white]%m-%d-%y %H:%M '
+set -g status-right "#[fg=white]%m-%d-%y %H:%M "
 
 # Colors (credit: connrs/dotfiles/master/tmux/tomorrow-night.tmux)
   # Status bar
