--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,9 +64,9 @@ bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind | split-window -h
 bind - split-window -v
 
-# Use PREFIX h and PREFIX l to cycle through windows
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# Use PREFIX p and PREFIX n to cycle through windows
+bind -r C-p select-window -t :-
+bind -r C-n select-window -t :+
 
 # Resize panes using PREFIX H, J, K, L
 bind -r H resize-pane -L 5
@@ -81,6 +81,9 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Restore clear screen
+bind C-l send-keys 'C-l'
 
 # Status bar
 set -g status-left ""
