Add Ctrl-p/n for tmux command history

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,6 +51,8 @@ set -g mouse-select-window on
 
 # Behave like Vim
 setw -g mode-keys vi
+# Ctrl-p/n for tmux command history in the status bar
+set-option -g status-keys emacs
 
 # Enter copy-mode with PREFIX [
 # Setup 'v' to begin selection as in Vim
