Use aliases more consistently

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,13 +10,13 @@
 
 # Force tmux to use UTF-8
 set -g utf8
-set-window-option -g utf8 on
+setw -g utf8 on
 
 # Make the OS X clipboard work within tmux (ignored on Linux).
-set-option -g default-command "which reattach-to-user-namespace >/dev/null && reattach-to-user-namespace -l zsh || zsh"
+set -g default-command "which reattach-to-user-namespace >/dev/null && reattach-to-user-namespace -l zsh || zsh"
 
 # Make zsh the default shell
-set-option -g default-shell $SHELL
+set -g default-shell $SHELL
 
 # Improve colors
 set -g default-terminal "screen-256color"
@@ -38,10 +38,10 @@ set -g escape-time 0
 set -g base-index 1
 
 # Rename windows based on what's running in them
-set-window-option -g automatic-rename on
+setw -g automatic-rename on
 
 # Renumber existing windows when windows are destroyed
-set-option -g renumber-windows on
+set -g renumber-windows on
 
 # Enable mouse support
 set -g mode-mouse on
@@ -52,7 +52,7 @@ set -g mouse-select-window on
 # Behave like Vim
 setw -g mode-keys vi
 # Ctrl-p/n for tmux command history in the status bar
-set-option -g status-keys emacs
+set -g status-keys emacs
 
 # Enter copy-mode with PREFIX [
 # Setup 'v' to begin selection as in Vim
