--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -290,7 +290,7 @@
 		</dict>
 	</dict>
 	<key>Default Bookmark Guid</key>
-	<string>A6B16E7C-4AC9-462A-922D-FC8F04B6BEAC</string>
+	<string>F205B8EE-D18A-4826-BD6C-E58BDE143BE8</string>
 	<key>DimBackgroundWindows</key>
 	<false/>
 	<key>DimInactiveSplitPanes</key>
@@ -344,11 +344,11 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSColorPanelMode</key>
-	<string>1</string>
+	<string>5</string>
 	<key>NSColorPickerSlidersDefaults</key>
 	<string>1</string>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop</string>
+	<string>~/dotfiles/iterm2/colors</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
 	<string>{987, 503}</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -384,9 +384,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>204 369 1389 411 0 0 1920 1177 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>54 242 924 485 0 0 1920 1200 </string>
+	<string>512 353 924 485 0 0 1920 1177 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 0 1920 1200 0 0 1920 1177 </string>
+	<string>4 13 1908 1160 0 0 1920 1177 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>136 55 650 451 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -630,7 +630,7 @@
 				<real>0.77254903316497803</real>
 			</dict>
 			<key>Guid</key>
-			<string>A6B16E7C-4AC9-462A-922D-FC8F04B6BEAC</string>
+			<string>F205B8EE-D18A-4826-BD6C-E58BDE143BE8</string>
 			<key>Hide After Opening</key>
 			<false/>
 			<key>Horizontal Spacing</key>
@@ -950,7 +950,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-			<string>Default</string>
+			<string>Tomorrow Dark Theme</string>
 			<key>Non Ascii Font</key>
 			<string>SourceCodePro-Light 11</string>
 			<key>Non-ASCII Anti Aliased</key>
@@ -1197,7 +1197,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-03-13T05:49:09Z</date>
+	<date>2015-04-23T01:01:37Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1245,6 +1245,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>2.0.0.20141103</string>
+	<string>2.0.0.20150412</string>
 </dict>
 </plist>
