Automate switching to a light theme.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -123,3 +123,5 @@ set -g status-right "#[fg=white]%m-%d-%y %H:%M "
 
   set -g mode-bg "#8abeb7"
   set -g mode-fg "#000000"
+
+if-shell 'test -n "$USING_LIGHT_THEME"' "source-file ~/.tmux_light_theme.conf"
