Update README.md with instructions on changing themes.

--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -1206,7 +1206,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-			<string>Tomorrow Dark Theme</string>
+			<string>Tomorrow Night Theme</string>
 			<key>Non Ascii Font</key>
 			<string>SourceCodePro-Light 11</string>
 			<key>Non-ASCII Anti Aliased</key>
