--- a/.agignore
+++ b/.agignore
@@ -1,3 +1,27 @@
+# Common
 log
 tags
 tmp
+plugins
+
+# Images
+.tif
+.tiff
+.gif
+.jpeg
+.jpg
+.png
+.pdf
+
+# Node
+node_modules
+
+# Bower
+bower_components
+
+# SASS
+.sass-cache
+
+# Rails
+spec/cassettes
+vendor/bundle
