Add periods to sentences…

--- a/.tmux_light_theme.conf
+++ b/.tmux_light_theme.conf
@@ -4,7 +4,7 @@ set -g status-right "#[fg=brightwhite]%m-%d-%y %H:%M "
 set -g status-bg white
 set -g status-fg '#fdf6e3'
 
-# Highlight active window
+# Active window highlights
 setw -g window-status-current-bg blue
 setw -g window-status-current-fg '#fdf6e3'
 
