--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,65 +8,65 @@
 #   - Enables the clipboard on OS X
 #   - brew install reattach-to-user-namespace
 
-# Force tmux to use UTF-8
+# Force tmux to use UTF-8.
 set -g utf8
 setw -g utf8 on
 
 # Make the OS X clipboard work within tmux (ignored on Linux).
 set -g default-command "which reattach-to-user-namespace >/dev/null && reattach-to-user-namespace -l zsh || zsh"
 
-# Make zsh the default shell
+# Make zsh the default shell.
 set -g default-shell $SHELL
 
-# Improve colors
+# Set 256 color support.
 set -g default-terminal "screen-256color"
 
-# Act like GNU Screen
+# Act like GNU Screen.
 set -g prefix C-a
 unbind C-b
 
 # To send C-a to the shell: C-a, C-a
 bind C-a send-prefix
 
-# Increase scrollback lines
+# Increase scrollback lines.
 set -g history-limit 50000
 
-# Allows for faster key repetition
+# Allows for faster key repetition.
 set -g escape-time 0
 
-# Start numbering at 1
+# Start numbering at 1.
 set -g base-index 1
 
-# Rename windows based on what's running in them
+# Rename windows based on what's running in them.
 setw -g automatic-rename on
 
-# Renumber existing windows when windows are destroyed
+# Renumber existing windows when windows are destroyed.
 set -g renumber-windows on
 
-# Enable mouse support
+# Enable mouse support.
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
-# Behave like Vim
+# Behave like Vim.
 setw -g mode-keys vi
-# Ctrl-p/n for tmux command history in the status bar
+# Ctrl-p/n for tmux command history in the status bar.
 set -g status-keys emacs
 
 # Enter copy-mode with PREFIX [
-# Setup 'v' to begin selection as in Vim
+# Setup 'v' to begin selection as in Vim.
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# Copy selection on Enter
+# Copy selection on Enter.
 unbind -t vi-copy Enter
 bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Use PREFIX | to split window horizontally and PREFIX - to split vertically
+# Use PREFIX | to split window horizontally and PREFIX - to split vertically.
 bind | split-window -h
 bind - split-window -v
 
-# Use PREFIX p and PREFIX n to cycle through windows
+# Use PREFIX p and PREFIX n to cycle through windows.
 bind -r C-p select-window -t :-
 bind -r C-n select-window -t :+
 
@@ -76,7 +76,7 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# Smart pane switching with awareness of Vim splits
+# Smart pane switching with awareness of Vim splits.
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
@@ -84,7 +84,7 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# Restore clear screen
+# Restore 'clear screen'.
 bind C-l send-keys 'C-l'
 
 # Status bar
@@ -96,12 +96,12 @@ set -g status-right "#[fg=white]%m-%d-%y %H:%M "
   set -g status-bg "#373b41"
   set -g status-fg "#c5c8c6"
 
-  # Highlight active window
+  # Active window highlights
   setw -g window-status-current-bg "#b4b7b5"
   setw -g window-status-current-fg "#1d1f21"
   setw -g window-status-current-attr bold
 
-  # Highlight activity in status bar
+  # Highlight activity in status bar.
   setw -g window-status-activity-fg "#8abeb7"
   setw -g window-status-activity-bg "#1d1f21"
 
