Update mouse settings for tmux 2.1.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,11 +43,8 @@ setw -g automatic-rename on
 # Renumber existing windows when windows are destroyed.
 set -g renumber-windows on
 
-# Enable mouse support.
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# Enable mouse support (-q for quiet).
+set-option -g -q mouse on
 
 # Behave like Vim.
 setw -g mode-keys vi
