Update tmux.conf for tmux 2.4.
Reference: https://shapeshed.com/custom-vim-bindings-in-tmux-2-4/

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,12 +48,10 @@ setw -g mode-keys vi
 set -g status-keys emacs
 
 # Enter copy-mode with PREFIX [
-# Setup 'v' to begin selection as in Vim.
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# Copy selection on Enter.
-unbind -t vi-copy Enter
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Use PREFIX | to split window horizontally and PREFIX - to split vertically.
 bind | split-window -h
