--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,10 +19,10 @@ set -g default-terminal "screen-256color"
 
 # Act like GNU Screen.
 set -g prefix C-a
-unbind C-b
+unbind-key C-b
 
 # To send C-a to the shell: C-a, C-a
-bind C-a send-prefix
+bind-key C-a send-prefix
 
 # Increase scrollback lines.
 set -g history-limit 50000
@@ -58,18 +58,21 @@ bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Use PREFIX | to split window horizontally and PREFIX - to split vertically.
-bind | split-window -h
-bind - split-window -v
+bind-key | split-window -h
+bind-key - split-window -v
 
 # Use PREFIX p and PREFIX n to cycle through windows.
-bind -r C-p select-window -t :-
-bind -r C-n select-window -t :+
+bind-key -r C-p select-window -t :-
+bind-key -r C-n select-window -t :+
 
 # Resize panes using PREFIX H, J, K, L
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
+
+# Quickly reload .tmux.conf
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -81,7 +84,7 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Restore 'clear screen'.
-bind C-l send-keys 'C-l'
+bind-key C-l send-keys 'C-l'
 
 # Status bar
 set -g clock-mode-style 24
