apply correct theme based on env

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,6 +92,5 @@ set -g status-left ""
 set -g status-right "%m-%d-%y %H:%M "
 
 # Colors
-# Gets run with `/bin/sh -c`
-if-shell '[[ $ITERM_PROFILE = "Tomorrow Night - Coding" ]]' "source-file ~/dotfiles/tmux_tomorrow_night_theme.conf"
-if-shell '[[ $ITERM_PROFILE = "Pencil Light - Writing" ]]' "source-file ~/dotfiles/tmux_pencil_light_theme.conf"
+set-hook -g after-new-session "source-file ~/dotfiles/tmux/apply_theme.conf"
+set-hook -g after-new-window "source-file ~/dotfiles/tmux/apply_theme.conf"
