Use a GUI-based pin-entry for GPG.
Why? This way, I don’t have to care what $GPG_TTY is set to.

I’ll be able to type my pin in whatever TTY I’m in.

--- a/gpg-agent.conf
+++ b/gpg-agent.conf
@@ -2,7 +2,7 @@
 enable-ssh-support
 
 # brew install pinentry
-pinentry-program /usr/local/bin/pinentry
+pinentry-program /usr/local/bin/pinentry-mac
 
 # Misc
 default-cache-ttl 600
