Get rid of unused key bindings.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,6 +49,7 @@ set -g status-keys emacs
 
 # ENV vars to be updated when creating a new session.
 # https://stackoverflow.com/a/9833996/1575238
+# ITERM_PROFILE is needed by tmux/apply_theme.conf
 set -ga update-environment "ITERM_PROFILE"
 
 # Enter copy-mode with PREFIX [
@@ -56,10 +57,6 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-
-# Use PREFIX | to split window horizontally and PREFIX - to split vertically.
-bind-key | split-window -h
-bind-key - split-window -v
 
 # Use PREFIX p and PREFIX n to cycle through windows.
 bind-key -r C-p select-window -t :-
