Point to Brian's new key.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
   name = Brian Ustas
   email = brianustas@gmail.com
-  signingkey = 0x3DEFF568765C9501
+  signingkey = 0x29665D8F7D3C4961
 [github]
   user = ustasb
 [alias]
