--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,8 @@
 # Brian Ustas's .tmux.conf
 #
-# Supports OS X and Linux (tested with Yosemite and Ubuntu 14.04).
+# Tested on OS X.
 #
-### Expected Installs
-#
+# Expected installs:
 # - https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 #   - Enables the clipboard on OS X
 #   - brew install reattach-to-user-namespace
@@ -15,7 +14,9 @@ set -g default-command "which reattach-to-user-namespace >/dev/null && reattach-
 set -g default-shell $SHELL
 
 # Set 256 color support.
-set -g default-terminal "screen-256color"
+# Matches $TERM.
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Act like GNU Screen.
 set -g prefix C-a
@@ -25,6 +26,7 @@ unbind-key C-b
 bind-key C-a send-prefix
 
 # Increase scrollback lines.
+set -g history-file ~/.tmux_history
 set -g history-limit 50000
 
 # Allows for faster key repetition.
@@ -42,8 +44,6 @@ set -g renumber-windows on
 # Enable mouse support (-q for quiet).
 set -g -q mouse on
 
-# Behave like Vim.
-setw -g mode-keys vi
 # Ctrl-p/n for tmux command history in the status bar.
 set -g status-keys emacs
 
