--- a/tmux/apply_theme.conf
+++ b/tmux/apply_theme.conf
@@ -1,2 +1,1 @@
-if-shell '[[ $ITERM_PROFILE = "Tomorrow Night" ]]' "source-file ~/dotfiles/tmux/tomorrow_night_theme.conf"
-if-shell '[[ $ITERM_PROFILE = "Pencil Light" ]]' "source-file ~/dotfiles/tmux/pencil_light_theme.conf"
+if-shell '[[ $ITERM_PROFILE = "Gruvbox Dark" ]]' "source-file ~/dotfiles/tmux/gruvbox_dark_theme.conf"
